<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mj.courseraandroidw2.MainActivity">


    <android.support.design.widget.TextInputLayout
    android:id="@+id/tilName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        tools:ignore="ExtraText">

         <EditText
              android:id="@+id/field_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/field_name_hint" />

    ﻿</android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilBirthDate"
        android:layout_width="@dimen/layout_custom_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilName">

        <EditText
            android:id="@+id/edtBirthDate"
            android:layout_marginTop="@dimen/et_margin_top"
            android:layout_width="@dimen/et_custom_width"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/field_Birth_Date_hint"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_BD_text"
        android:layout_alignBottom="@id/tilBirthDate"
        android:layout_toRightOf="@id/tilBirthDate"
        android:layout_toEndOf="@id/tilBirthDate"
        android:background="@color/colorAccent"
        android:textColor="@color/colorIconsText"
        android:onClick="setDate" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilBirthDate">

        <EditText
            android:id="@+id/field_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_telephone_hint"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilPhone">

        <EditText
            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_Email_hint"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilEmail">

        <EditText
            android:id="@+id/field_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_Description_hint" />

        ﻿</android.support.design.widget.TextInputLayout>



    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilDescription"/>



      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/button_text"
          android:textColor="@color/colorIconsText"
          android:background="@color/colorAccent"
          android:layout_alignParentBottom="true"
          android:onClick="confirmData"
          />


</RelativeLayout>
